# PaCMake

./: LICENSE  Loader.cmake  PaCMake.cmake  PaCMakeLoader.cmake  README.md
module/: add_package.cmake  build_package.cmake  compare_files.cmake  default_version.cmake  download_package.cmake  fetch_package.cmake  log.cmake  package_property.cmake  package_version.cmake  parse_args.cmake  patch.cmake  register_package.cmake  run_patch.cmake  scan_packages.cmake  textfile.cmake
package/: test.sh
package/FreeGLUT/: package.cmake
package/FreeGLUT/example/3.2.1/: CMakeLists.txt  main.c
package/FreeGLUT/patch/: preconfigure.cmake
package/GTest/: package.cmake
package/GTest/example/1.8.1/: CMakeLists.txt  main.cpp
package/Opus/: package.cmake
package/Opus/example/1.3.1/: CMakeLists.txt  main.cpp
package/Opus/patch/: preconfigure.cmake
package/SDL2/: package.cmake
package/SDL2/example/2.0.10/: CMakeLists.txt  main.cpp
package/SDL2/example/2.0.12/: CMakeLists.txt
package/SDL2/patch/: preconfigure.cmake
package/SDL2/patch/2.0.12/: preconfigure.cmake
package/SDL2_mixer/: package.cmake
package/SDL2_mixer/example/2.0.4/: CMakeLists.txt  main.cpp
package/SDL2_mixer/patch/: preconfigure.cmake
package/SDL2_mixer/patch/files/: CMakeLists.txt
package/SDL2_ttf/: package.cmake
package/SDL2_ttf/example/2.0.15/: CMakeLists.txt  main.cpp
package/SDL2_ttf/patch/: postinstall.cmake  preconfigure.cmake
package/SOIL/: package.cmake
package/SOIL/example/1.0.4/: CMakeLists.txt  main.c
package/bzip2/: package.cmake
package/bzip2/example/1.0.8/: CMakeLists.txt  main.c
package/bzip2/patch/: preconfigure.cmake
package/bzip2/patch/files/: CMakeLists.txt
package/freetype/: package.cmake
package/freetype/example/2.10.1/: CMakeLists.txt  main.c
package/freetype/patch/: preconfigure.cmake
package/glad/: package.cmake
package/glad/example/0.1.33/: CMakeLists.txt  main.c
package/glatter/: package.cmake
package/glatter/example/1.0.0/: CMakeLists.txt  main.c
package/glatter/patch/: preconfigure.cmake
package/glatter/patch/files/: CMakeLists.txt
package/glew/: package.cmake
package/glew/example/2.1.0/: CMakeLists.txt  main.c
package/glew/patch/: preconfigure.cmake
package/glfw/: package.cmake
package/glfw/example/3.3/: CMakeLists.txt
package/glfw/patch/: preconfigure.cmake
package/glfw3/: package.cmake
package/glfw3/example/3.3.8/: CMakeLists.txt
package/glfw3/example/3.4/: CMakeLists.txt  main.c
package/glm/: package.cmake
package/glm/example/0.9.9.5/: CMakeLists.txt  main.cpp
package/googletest/: package.cmake
package/googletest/example/1.8.1/: CMakeLists.txt
package/harfbuzz/: package.cmake
package/harfbuzz/example/2.6.0/: CMakeLists.txt  main.c
package/harfbuzz/patch/: preconfigure.cmake
package/imgui/: package.cmake
package/imgui-backend-glfw/: package.cmake
package/imgui-backend-glfw/example/1.89.8/: CMakeLists.txt
package/imgui-backend-glfw/example/1.89.9/: CMakeLists.txt
package/imgui-backend-glfw/example/1.90.4/: CMakeLists.txt  main.cpp
package/imgui-backend-glfw/example/1.90.5/: CMakeLists.txt
package/imgui-backend-glfw/patch/: source.cmake
package/imgui-backend-vulkan/: package.cmake
package/imgui-backend-vulkan/example/1.89.8/: CMakeLists.txt  main.cpp
package/imgui-backend-vulkan/example/1.89.9/: CMakeLists.txt
package/imgui-backend-vulkan/example/1.90.4/: CMakeLists.txt
package/imgui-backend-vulkan/patch/: source.cmake
package/imgui/example/1.89.8/: CMakeLists.txt
package/imgui/example/1.89.9/: CMakeLists.txt  main.cpp
package/imgui/example/1.90.4/: CMakeLists.txt
package/imgui/example/1.90.5/: CMakeLists.txt
package/imgui/patch/: source.cmake
package/implot/: package.cmake
package/implot/example/0.15/: CMakeLists.txt
package/implot/example/0.16/: CMakeLists.txt  main.cpp
package/implot/patch/: source.cmake
package/libmodplug/: package.cmake
package/libmodplug/example/0.8.9.0/: CMakeLists.txt
package/libmodplug/patch/: preconfigure.cmake
package/libmodplug/patch/files/: CMakeLists.txt
package/libogg/: package.cmake
package/libogg/example/1.3.3/: CMakeLists.txt  main.cpp
package/libogg/patch/: preconfigure.cmake
package/libpng/: package.cmake
package/libpng/example/1.6.37/: CMakeLists.txt  main.c
package/libpng/example/1.6.40/: CMakeLists.txt
package/libpng/patch/: postinstall.cmake  preconfigure.cmake  source.cmake
package/modplug/: package.cmake
package/modplug/example/0.8.9.0/: CMakeLists.txt  main.cpp
package/modplug/patch/files/: CMakeLists.txt
package/opusfile/: package.cmake
package/opusfile/example/0.11/: CMakeLists.txt  main.cpp
package/opusfile/patch/: preconfigure.cmake
package/opusfile/patch/files/: CMakeLists.txt
package/soil/: package.cmake
package/soil/example/1.0.4/: CMakeLists.txt
package/stringhelper/: package.cmake
package/stringhelper/example/1.0.4/: CMakeLists.txt  main.c
package/stringhelper/example/1.0.5/: CMakeLists.txt
package/vorbis/: package.cmake
package/vorbis/example/1.3.6/: CMakeLists.txt  main.cpp
package/vorbis/patch/: preconfigure.cmake
package/zlib/: package.cmake
package/zlib/example/1.2.11/: CMakeLists.txt  main.c
package/zlib/example/1.2.13/: CMakeLists.txt  main.c
package/zlib/patch/: preconfigure.cmake  source.cmake
patch/: SDL2.cmake  SDL2_ttf.cmake  freetype.cmake  glew.cmake  harfbuzz.cmake  libpng.cmake  zlib.cmake
